--- a/pom.xml
+++ b/pom.xml
@@ -5,73 +5,101 @@
   <groupId>computer-database</groupId>
   <artifactId>computer-database</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>computer-database</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.version>3.8.0</maven.compiler.version>
+		<maven.war.version>3.2.2</maven.war.version>
+		<com.h2database.version>1.4.197</com.h2database.version>
+		<javax.servlet.version>4.0.1</javax.servlet.version>
+		<!--javax.servlet.jstl.version>1.2</javax.servlet.jstl.version-->
+		<junit.version>4.11</junit.version>
+		<mysql.connector.version>8.0.13</mysql.connector.version>
+		<maven.checkstyle.version>3.0.0</maven.checkstyle.version>
+		<org.mockito.version>2.23.4</org.mockito.version>
+		<org.slf4j.version>1.6.4</org.slf4j.version>
+  </properties>
   
   <build>
    <plugins>
       <plugin>
       	<groupId>org.apache.maven.plugins</groupId>
     	<artifactId>maven-compiler-plugin</artifactId>
-    	<version>3.1</version>
+    	<version>${maven.compiler.version}</version>
     	<configuration>
      	  <source>1.8</source>
       	  <target>1.8</target>
     	</configuration>
       </plugin>
+      <plugin>
+      	<artifactId>maven-war-plugin</artifactId>
+      	<version>${maven.war.version}</version>
+      	<configuration>
+      	<warSourceDirectory>WebContent</warSourceDirectory>
+      	</configuration>
+      </plugin>
   	</plugins>
   </build>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <dependencies>
+  	<dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${com.h2database.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${javax.servlet.version}</version>
+    </dependency>
+    <!--dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${javax.servlet.jstl.version}</version>
+    </dependency-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>2.10.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.25</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.6.4</version>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.6</version>
+      <version>${mysql.connector.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.197</version>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${org.mockito.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-        <scope>provided</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${org.slf4j.version}</version>
     </dependency>
-    <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>jstl</artifactId>
-        <version>1.2</version>
-        <scope>provided</scope>
-    </dependency>
+    <!--dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>3.2.0</version>
+    </dependency-->
   </dependencies>
+  
+  <reporting>
+    <plugins>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+      	<artifactId>maven-checkstyle-plugin</artifactId>
+      		<version>${maven.checkstyle.version}</version>
+			<configuration>
+				<configLocation>src/main/resources/checkstyle/checkstyle.xml</configLocation>
+			</configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
