--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-DatabaseDriver=com.mysql.jdbc.Driver
+DatabaseDriver=com.mysql.cj.jdbc.Driver
 Url=jdbc:mysql://localhost:3306/computer-database-db
-user=admincdb
-password=qwerty1234
+User=admincdb
+Password=qwerty1234
 MaxPool=250
