--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
       <artifactId>slf4j-simple</artifactId>
       <version>${org.slf4j.version}</version>
     </dependency>
-    <!--dependency>
+    <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>3.2.0</version>
-    </dependency-->
+    </dependency>
   </dependencies>
   
   <reporting>
