--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,3 +3,6 @@ Url=jdbc:mysql://localhost:3306/computer-database-db
 User=admincdb
 Password=qwerty1234
 MaxPool=250
+CachePrepStmts="true"
+PrepStmtCacheSize="250"
+PrepStmtCacheSqlLimit="2048"
