--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,7 @@ DatabaseDriver=com.mysql.cj.jdbc.Driver
 Url=jdbc:mysql://localhost:3306/computer-database-db
 User=admincdb
 Password=qwerty1234
-MaxPool=250
-CachePrepStmts="true"
-PrepStmtCacheSize="250"
-PrepStmtCacheSqlLimit="2048"
+MaxPool=10
+CachePrepStmts=TRUE
+PrepStmtCacheSize=250
+PrepStmtCacheSqlLimit=2048
