--- a/console/pom.xml
+++ b/console/pom.xml
@@ -11,7 +11,6 @@
 
 	<groupId>com.computerDatabase.excilys</groupId>
 	<artifactId>console</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>console</name>
@@ -23,6 +22,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.computerDatabase.excilys</groupId>
+			<artifactId>binding</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.computerDatabase.excilys</groupId>
 			<artifactId>core</artifactId>
