[FEATURE] Implemented Spring security and JaxRS

--- a/console/pom.xml
+++ b/console/pom.xml
@@ -19,23 +19,24 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<computerdatabase.version>0.0.1-SNAPSHOT</computerdatabase.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.computerDatabase.excilys</groupId>
 			<artifactId>binding</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${computerdatabase.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.computerDatabase.excilys</groupId>
 			<artifactId>core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${computerdatabase.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.computerDatabase.excilys</groupId>
 			<artifactId>service</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${computerdatabase.version}</version>
 		</dependency>
 	</dependencies>
 
