--- a/persistence/src/main/resources/config.properties
+++ b/persistence/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-DatabaseDriver=com.mysql.cj.jdbc.Driver
+DatabaseDriver=com.mysql.jdbc.Driver
 Url=jdbc:mysql://localhost:3306/computer-database-db
 User=admincdb
 Password=qwerty1234
